--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # dependencies  npm包文件
 /node_modules
-
+/client/node_modules
 # production  打包文件
 /build
-
+/client/build
 # misc 
 .DS_Store
-
+/client/.DS_Store
 npm-debug.log*
+/client/npm-debug.log*
